# quirc_test

./: CMakeLists.txt  README.md
src/: identify.c  main.cpp  quirc.c  quirc_internal.h
